<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/home_bottom_nav_item"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:orderInCategory="1"
    />
    <item
            android:id="@+id/happiness_bottom_nav_item"
            android:title="@string/happiness"
            android:icon="@drawable/ic_happy_black_24dp"
            android:orderInCategory="2"
    />
    <item
            android:id="@+id/inbox_bottom_nav_item"
            android:title="@string/inbox"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:orderInCategory="3"
    />

    <!--<item-->
            <!--android:id="@+id/payments_bottom_nav_item"-->
            <!--android:title="@string/payments"-->
            <!--android:icon="@drawable/ic_payment_black_24dp"-->
            <!--android:orderInCategory="4"-->
    <!--/>-->

    <!--<item-->
            <!--android:id="@+id/dashboard_bottom_nav_item"-->
            <!--android:title="@string/dashboard"-->
            <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
            <!--android:orderInCategory="5"-->
    <!--/>-->

</menu>