<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:id="@+id/main_coordinator_layout"
        android:background="@color/backdrop"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:id="@+id/const_layout"
    >


        <android.support.v7.widget.Toolbar
                android:id="@+id/app_toolBar"
                app:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"
                android:layout_marginTop="0dp" app:layout_constraintTop_toTopOf="parent"/>



        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/imageView"
                android:scaleType="centerCrop"
                android:src="@drawable/buildings"
                app:layout_constraintTop_toBottomOf="@+id/app_toolBar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/pictureTitle"
                  android:id="@+id/nightTextView"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:textAlignment="textStart"
                  android:textColor="@android:color/white"
                  android:layout_margin="8dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/imageView"/>


        <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                app:elevation="8dp"
                app:itemIconTint="@android:color/white"
                app:itemTextColor="@android:color/white"
                app:menu="@menu/bottom_nav_menu"
                app:layout_dodgeInsetEdges="bottom"

                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp"/>
        <TextView
                android:text="@string/events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/events_textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <TextView
                android:text="@string/latest_news"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"

                android:textStyle="bold"
                android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="56dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/events_textView" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.806"/>
        <LinearLayout
                android:orientation="horizontal"
                android:background="@color/backdrop"
                android:weightSum="6"
                android:layout_width="0dp"
                android:layout_height="0dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/bottom_nav">

            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_weight="3"
                                                android:id="@+id/event_cardView"
                                                android:layout_height="match_parent"
                                                android:layout_marginEnd="2dp"
                                                app:cardCornerRadius="8dp"
                                                app:cardElevation="8dp">




                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:weightSum="4"
                              android:orientation="vertical"
                >

                    <ImageView android:layout_width="match_parent" android:layout_height="0dp"
                               android:layout_weight="2"
                               android:src="@drawable/event8"
                               android:scaleType="centerCrop"
                    >


                    </ImageView>


                    <TextView android:layout_width="wrap_content"
                              android:layout_height="0dp"
                              android:layout_weight="2"
                              android:text="@string/lorem"
                              android:textSize="14sp"
                              android:layout_margin="8dp"

                    />


                </LinearLayout>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/current_time"
                          android:id="@+id/currentTimeTextView2"
                          android:textSize="16sp"
                          android:textStyle="bold"
                          android:textAlignment="textStart"
                          android:textColor="@android:color/white"
                          android:layout_margin="8dp"

                />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_weight="3"
                                                android:layout_height="match_parent"
                                                android:id="@+id/latest_news_cardView"
                                                app:cardCornerRadius="8dp"
                                                app:cardElevation="8dp"
                                                android:layout_marginStart="2dp"

            >


                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:weightSum="4"
                              android:orientation="vertical"
                >


                    <ImageView android:layout_width="match_parent"
                               android:layout_height="0dp"
                               android:layout_weight="2"
                               android:src="@drawable/buildings"
                               android:scaleType="centerCrop"
                    />

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="0dp"
                              android:layout_weight="2"
                              android:text="@string/lorem"
                              android:textSize="14sp"
                              android:layout_margin="8dp"

                    />


                </LinearLayout>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/news"
                          android:textSize="16sp"
                          android:textStyle="bold"
                          android:textAlignment="textEnd"
                          android:textColor="@android:color/white"
                          android:layout_margin="8dp"
                          android:layout_gravity="end"

                />

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>